--- a/sqlc/sqlc.yaml
+++ b/sqlc/sqlc.yaml
@@ -5,6 +5,7 @@ sql:
     schema: "schema.sql"
     gen:
       go:
+        emit_pointers_for_null_types: true # use *string for nullable fields
         package: "db"
         out: "db"
         sql_package: "pgx/v5"
