clean up code, add conditional favicons

--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ ENV=production
 HOST=localhost:1323
 SCHEME=http
 PING_HOST=localhost:1323
+HOST_WITH_SCHEME=http://localhost:1323
 SMTP_EMAIL=mano.sriram0@gmail.com
