add pricing page, fix minor issues

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ SCHEME=http
 PING_HOST=localhost:1323
 HOST_WITH_SCHEME=http://localhost:1323
 SMTP_EMAIL=mano.sriram0@gmail.com
+DEFAULT_PERIOD=25
+DEFAULT_GRACE_PERIOD=25
