update circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,11 @@ jobs:
       - checkout
       - add_ssh_keys:
           fingerprints:
-            - "d4:1b:e9:0d:80:77:61:01:4d:05:be:6c:96:eb:bb:71"
             - "SHA256:CtV/KHY1P7Ecte5xdGXNcESyGeeVCBSp4XIc6ZvFXr4"
       - run:
           name: Setup
           command: |
-            ssh-keyscan 157.230.242.217 >> ~/.ssh/known_hosts
+            ssh-keyscan $OUTAGEALERT_IP >> ~/.ssh/known_hosts
       - run:
           name: Deploy to VM
           command: ssh root@$OUTAGEALERT_IP "cd ~/dev/outagealert && git pull origin main && docker-compose up -d --build"
