--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           # command: ssh -v root@$OUTAGEALERT_IP "sudo apt-get update && sudo apt-get install -y apt-transport-https ca-certificates curl gnupg && curl -sLf --retry 3 --tlsv1.2 --proto \"=https\" 'https://packages.doppler.com/public/cli/gpg.DE2A7741A397C129.key' | sudo gpg --dearmor -o /usr/share/keyrings/doppler-archive-keyring.gpg && echo \"deb [signed-by=/usr/share/keyrings/doppler-archive-keyring.gpg] https://packages.doppler.com/public/cli/deb/debian any-version main\" | sudo tee /etc/apt/sources.list.d/doppler-cli.list && sudo apt-get update && sudo apt-get install doppler"
       - run:
           name: Deploy to VM
-          command: ssh -v root@$OUTAGEALERT_IP "yes | docker system prune && cd /root/dev/outagealert.io && git pull origin main && doppler configure set token $DOPPLER_TOKEN && docker-compose down && docker-compose up -d --build && exit"
+          command: ssh -v root@$OUTAGEALERT_IP "yes | docker system prune && cd /root/dev/outagealert.io && git stash && git pull origin main && git stash pop && doppler configure set token $DOPPLER_TOKEN && docker-compose down && docker-compose up -d --build && exit"
 
 workflows:
   version: 2
