update circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,8 @@ jobs:
           fingerprints:
             - "SHA256:CtV/KHY1P7Ecte5xdGXNcESyGeeVCBSp4XIc6ZvFXr4"
       - checkout
+      - setup_remote_docker:
+          version: 27.1.2
       - run:
           name: Setup
           command: |
