--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        - DOPPLER_TOKEN=${DOPPLER_TOKEN}
     command: >
       sh -c "doppler run -- ./outagealert"
     tty: true
