--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ services:
   app:
     container_name: backend
     image: manosriram/outagealert:app
+    environment:
+      - DOPPLER_TOKEN: $DOPPLER_TOKEN
     build:
       context: .
       dockerfile: Dockerfile
-      args:
-        - DOPPLER_TOKEN=${DOPPLER_TOKEN}
     command: >
       sh -c "doppler run -- ./outagealert"
     tty: true
