--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     container_name: backend
     image: manosriram/outagealert:app
     environment:
-      - DOPPLER_TOKEN: ${DOPPLER_TOKEN}
+      DOPPLER_TOKEN: ${DOPPLER_TOKEN}
     build:
       context: .
       dockerfile: Dockerfile
