--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
             docker-compose push
       - run:
           name: Deploy to VM
-          command: ssh -v root@$OUTAGEALERT_IP "yes | docker system prune && cd /root/dev/outagealert.io && git pull origin main && curl -Ls https://cli.doppler.com/install.sh | sh && doppler configure set token $DOPPLER_TOKEN && docker-compose pull && docker-compose down && DOPPLER_TOKEN=$DOPPLER_TOKEN docker-compose up -d app"
+          command: ssh -v root@$OUTAGEALERT_IP "echo $DOCKER_REGISTRY_PAT | docker login -u manosriram --password-stdin && yes | docker system prune && docker pull app:latest && cd /root/dev/outagealert.io && git pull origin main && curl -Ls https://cli.doppler.com/install.sh | sh && doppler configure set token $DOPPLER_TOKEN && docker-compose pull && docker-compose down && DOPPLER_TOKEN=$DOPPLER_TOKEN docker-compose up -d app"
 
 workflows:
   version: 2
