update dockercompose psql service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,16 +22,23 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
+      - POSTGRES_HOST=0.0.0.0
       - POSTGRES_DB=outagealert
+      - PGDATA=/var/lib/postgresql/data/pgdata
+      - POSTGRES_HOST_AUTH_METHOD=trust
     ports:
       - "5432:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - "pgdata:/var/lib/postgresql/data"
     healthcheck:
       test: [ "CMD-SHELL", "sh -c 'pg_isready -U postgres -d outagealert'" ]
       interval: 10s
       timeout: 1s
       retries: 5
+    command: 
+      - "postgres"
+      - "-c"
+      - "listen_addresses=*"
 
   migrations:
     image: ghcr.io/kukymbr/goose-docker
