--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,11 @@ services:
     container_name: postgres
     image: postgres:13
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_HOST=0.0.0.0
-      - POSTGRES_DB=outagealert
-      - PGDATA=/var/lib/postgresql/data/pgdata
-      - POSTGRES_HOST_AUTH_METHOD=trust
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_HOST: 0.0.0.0
+      POSTGRES_DB: outagealert
+      PGDATA: /var/lib/postgresql/data/pgdata
     ports:
       - "5432:5432"
     volumes:
