--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   app:
     container_name: backend
     image: manosriram/outagealert:app
+    pull_policy: always
     environment:
       DOPPLER_TOKEN: ${DOPPLER_TOKEN}
     # build:
