--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,15 +19,20 @@ jobs:
       - setup_remote_docker:
           version: default
       - run:
-          name: Setup
+          name: Setup and Deploy
           command: |
-            ssh-keyscan $OUTAGEALERT_IP >> ~/.ssh/known_hosts
-            echo $DOCKER_REGISTRY_PAT | docker login -u manosriram --password-stdin
-            docker build . -t manosriram/outagealert:app
-            docker push manosriram/outagealert:app
-      - run:
-          name: Deploy to VM
-          command: ssh -v root@$OUTAGEALERT_IP "echo $DOCKER_REGISTRY_PAT | docker login -u manosriram --password-stdin && yes | (docker rmi manosriram/outagealert:app 2>/dev/null || true) && docker system prune && cd /root/dev/outagealert.io && git pull origin main && docker pull manosriram/outagealert:app && docker-compose -f /root/dev/outagealert.io/docker-compose.yml down && curl -Ls https://cli.doppler.com/install.sh | sh && doppler configure set token $DOPPLER_TOKEN && DOPPLER_TOKEN=$DOPPLER_TOKEN docker-compose -f /root/dev/outagealert.io/docker-compose.yml up --force-recreate -d"
+            chmod +x ./deploy.sh
+            ./deploy.sh
+      # - run:
+          # name: Setup
+          # command: |
+            # ssh-keyscan $OUTAGEALERT_IP >> ~/.ssh/known_hosts
+            # echo $DOCKER_REGISTRY_PAT | docker login -u manosriram --password-stdin
+            # docker build . -t manosriram/outagealert:app
+            # docker push manosriram/outagealert:app
+      # - run:
+          # name: Deploy to VM
+          # command: ssh -v root@$OUTAGEALERT_IP "echo $DOCKER_REGISTRY_PAT | docker login -u manosriram --password-stdin && yes | (docker rmi manosriram/outagealert:app 2>/dev/null || true) && docker system prune && cd /root/dev/outagealert.io && git pull origin main && docker pull manosriram/outagealert:app && docker-compose -f /root/dev/outagealert.io/docker-compose.yml down && curl -Ls https://cli.doppler.com/install.sh | sh && doppler configure set token $DOPPLER_TOKEN && DOPPLER_TOKEN=$DOPPLER_TOKEN docker-compose -f /root/dev/outagealert.io/docker-compose.yml up --force-recreate -d && docker system prune"
 
 workflows:
   version: 2
