--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - secondary_volume:/var/lib/postgresql/data
+      # - secondary_volume:/var/lib/postgresql/data
       - ./init-database.sh:/docker-entrypoint-initdb.d/init-database.sh
     healthcheck:
       test: [ "CMD-SHELL", "sh -c 'pg_isready -U postgres -d outagealert'" ]
