--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,6 @@ services:
     ports:
       - "1323:1323"
       - "80:1323"
-    # volumes:
-      # - secondary_volume:/build
     depends_on:
       - db
 
@@ -27,7 +25,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      # - secondary_volume:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
       - ./init-database.sh:/docker-entrypoint-initdb.d/init-database.sh
     healthcheck:
       test: [ "CMD-SHELL", "sh -c 'pg_isready -U postgres -d outagealert'" ]
@@ -49,9 +47,10 @@ services:
       - ./migrations:/migrations
 
 volumes:
-  secondary_volume:
-    driver: local
-    driver_opts:
-      type: none
-      device: /mnt/volume_sgp1_02
-      o: bind
+  postgres_data:
+  # secondary_volume:
+    # driver: local
+    # driver_opts:
+      # type: none
+      # device: /mnt/volume_sgp1_02
+      # o: bind
