--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,10 @@
 services:
   app:
-    container_name: backend
     image: manosriram/outagealert:app
     pull_policy: always
+    deploy:
+      mode: replicated
+      replicas: 3
     environment:
       DOPPLER_TOKEN: ${DOPPLER_TOKEN}
     command: >
