--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: manosriram/outagealert:app
     deploy:
       mode: replicated
-      replicas: 3
+      replicas: 2
       update_config:
           parallelism: 2
           delay: 10s
@@ -19,8 +19,9 @@ services:
     ports:
       - "1323:1323"
     depends_on:
-      - db
-
+      db:
+        condition: service_healthy
+  
   db:
     image: postgres:13
     deploy:
@@ -40,15 +41,17 @@ services:
       - postgres_data:/var/lib/postgresql/data
       - ./init-database.sh:/docker-entrypoint-initdb.d/init-database.sh
     healthcheck:
-      test: [ "CMD-SHELL", "sh -c 'pg_isready -U postgres -d outagealert'" ]
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 10s
-      timeout: 1s
+      timeout: 5s
       retries: 5
+      start_period: 30s
 
   migrations:
     image: ghcr.io/kukymbr/goose-docker
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     restart: "no"
     networks:
       - public
@@ -63,13 +66,6 @@ services:
 networks:
   public:
     external: true
-  default:
 
 volumes:
   postgres_data:
-  # secondary_volume:
-    # driver: local
-    # driver_opts:
-      # type: none
-      # device: /mnt/volume_sgp1_02
-      # o: bind
