--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
           order: start-first
     environment:
       DOPPLER_TOKEN: ${DOPPLER_TOKEN}
-    restart: always
+    # restart: always
     networks:
       - public
     command: >
@@ -26,7 +26,7 @@ services:
     deploy:
       mode: replicated
       replicas: 1
-    restart: always
+    # restart: always
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
@@ -41,7 +41,7 @@ services:
       - ./init-database.sh:/docker-entrypoint-initdb.d/init-database.sh
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
-      interval: 10s
+      interval: 3s
       timeout: 5s
       retries: 5
       start_period: 30s
