update docker-compose to use bridge network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,7 +67,8 @@ services:
 networks:
   outagenet:
     external: true
-    driver: overlay
+    driver: bridge
+    # driver: overlay
 
 volumes:
   postgres_data:
