do not use swarm scope in network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,9 @@ services:
   
   db:
     image: postgres:13
-    deploy:
-      mode: replicated
-      replicas: 1
+    # deploy:
+      # mode: replicated
+      # replicas: 1
     # restart: always
     environment:
       - POSTGRES_USER=postgres
@@ -66,9 +66,6 @@ services:
 
 networks:
   outagenet:
-    # external: true
-    driver: overlay
-    attachable: true
 
 volumes:
   postgres_data:
