--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,9 @@ services:
     environment:
       DOPPLER_TOKEN: ${DOPPLER_TOKEN}
     networks:
-      - outagenet
+      outagenet:
+        aliases:
+          - app
     command: >
       sh -c "doppler run -- ./outagealert"
     tty: true
@@ -28,7 +30,11 @@ services:
       - POSTGRES_DB=outagealert
       - PGDATA=/var/lib/postgresql/data/pgdata
     networks:
-      - outagenet
+      outagenet:
+        aliases:
+          - db
+          - database
+          - postgres
     ports:
       - "5432:5432"
     volumes:
@@ -53,7 +59,7 @@ services:
       - outagenet
     environment:
       - GOOSE_DRIVER=postgres
-      - GOOSE_DBSTRING=host=db port=5432 user=postgres password=password dbname=outagealert
+      - GOOSE_DBSTRING=host=db.outagenet port=5432 user=postgres password=password dbname=outagealert
       - GOOSE_VERBOSE=true
       - GOOSE_COMMAND=up
     volumes:
