--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,10 +45,10 @@ services:
     image: ghcr.io/kukymbr/goose-docker
     depends_on:
       - db
-    # deploy:
-      # restart_policy:
-        # condition: none
-      # replicas: 1
+    deploy:
+      restart_policy:
+        condition: none
+      replicas: 1
     environment:
       - GOOSE_DRIVER=postgres
       - GOOSE_DBSTRING=host=db port=5432 user=postgres password=password dbname=outagealert
