--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     image: manosriram/outagealert:app
     environment:
       DOPPLER_TOKEN: ${DOPPLER_TOKEN}
+    scale: 2
     deploy:
       replicas: 2
     command: >
