--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,17 +10,23 @@ services:
       sh -c "doppler run -- ./outagealert"
     tty: true
     expose:
-      - "1323"
+      - "1323:1323"
+      - "1324:1323"
     depends_on:
       - db
     networks:
       - outagenet
 
   nginx:
+    image: nginx:latest
     ports:
       - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
+    networks:
+      - outagenet
   
   db:
     image: postgres:13
