fix: allocate ranged ports

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,8 @@ services:
     command: >
       sh -c "doppler run -- ./outagealert"
     tty: true
-    expose:
-      - "1323:1323"
-      - "1324:1323"
+    ports:
+      - "1323-1325:1323"
     depends_on:
       - db
     networks:
