--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,14 @@ services:
     image: nginx:latest
     ports:
       - "80:80"
+    deploy:
+      resources:
+        limits:
+          memory: 150M
+        reservations:
+          memory: 50M
+      restart_policy:
+        condition: on-failure
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
